dataset1235/2025-2/1955397009/users/2808189831/executions/1107611404_48684178.log
== SUBMISSION (2025-08-24 17:08:20)
-- CODE: 
vendas = float(input())
vendas = lucro * 0.30

print(f"{lucro:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 17:05:24)
-- CODE: 
vendas = float(input))
vendas = lucro * 0.30
print(round9lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 1
    vendas = float(input))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 1
    vendas = float(input))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 1
    vendas = float(input))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 1
    vendas = float(input))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 1
    vendas = float(input))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 1
    vendas = float(input))
                         ^
SyntaxError: unmatched ')'
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 17:06:14)
-- CODE: 
vendas = float(input())
vendas = lucro * 0.30
print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 17:05:23)
-- CODE: 
vendas = float(input))
vendas = lucro * 0.30
print(round9lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 1
    vendas = float(input))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 1
    vendas = float(input))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 1
    vendas = float(input))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 1
    vendas = float(input))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 1
    vendas = float(input))
                         ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 1
    vendas = float(input))
                         ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 17:08:07)
-- CODE: 
vendas = float(input())
vendas = lucro * 0.30

print(f"{lucro:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 17:06:55)
-- CODE: 
vendas = float(input())
vendas = lucro * 0.30
print(round(lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-24 17:08:09)
-- CODE: 
vendas = float(input())
vendas = lucro * 0.30

print(f"{lucro:.2f}")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    vendas = lucro * 0.30
             ^^^^^
NameError: name 'lucro' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-24 17:06:03)
-- CODE: 
vendas = float(input())
vendas = lucro * 0.30
print(round9lucro,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1452.88
---- correct output:
435.86
-- ERROR:
File "XXXX", line 3
    print(round9lucro,2))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
700.50
---- correct output:
210.15
-- ERROR:
File "XXXX", line 3
    print(round9lucro,2))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
200.0
---- correct output:
60.0
-- ERROR:
File "XXXX", line 3
    print(round9lucro,2))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
450.50
---- correct output:
135.15
-- ERROR:
File "XXXX", line 3
    print(round9lucro,2))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
551.02
---- correct output:
165.31
-- ERROR:
File "XXXX", line 3
    print(round9lucro,2))
                        ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
1893.99
---- correct output:
568.2
-- ERROR:
File "XXXX", line 3
    print(round9lucro,2))
                        ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
